fix: Update minimap background color for improved visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ input, textarea, select, button, [contenteditable] {
 #minimap {
     width: 100%;
     height: 100%;
-    background-color: rgba(32, 32, 32, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     /* border: 2px solid #33f; */
     border-radius: 50%;
 }
